pom travis&jacoco